1. fix swagger auth 2. replication
