# storage/api-docs/api-docs.json
@@ -136,6 +136,36 @@
                     }
                 }
             }
+        },
+        "/api/v1/lots/{lotId}": {
+            "delete": {
+                "tags": [
+                    "Lot"
+                ],
+                "summary": "Delete one lot.",
+                "operationId": "9a508daaa53d4669b27e0ccbdd677752",
+                "parameters": [
+                    {
+                        "name": "lotId",
+                        "in": "path",
+                        "description": "write id of lot that you want delete",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
